// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prep meal plan a basic plan 1`] = `
Array [
  Object {
    "actions": Array [],
    "dateIndex": 0,
    "id": "meal_0_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_1_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_1_a_0_COOK",
        "id": "m_0_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "id": "m_0_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 1,
    "id": "meal_1_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_0_1_a_0_COOK",
        "dayIndex": 1,
        "id": "m_1_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "id": "m_1_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 2,
    "id": "meal_2_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "dayIndex": 2,
        "id": "m_2_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "id": "m_2_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 3,
    "id": "meal_3_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "dayIndex": 3,
        "id": "m_3_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_2_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_3_2_a_0_COOK",
        "id": "m_3_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 4,
    "id": "meal_4_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_3_2_a_0_COOK",
        "dayIndex": 4,
        "id": "m_4_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "id": "m_4_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 5,
    "id": "meal_5_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_3_2_a_0_COOK",
        "dayIndex": 5,
        "id": "m_5_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "id": "m_5_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 6,
    "id": "meal_6_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_1_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_1_a_0_COOK",
        "id": "m_6_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_2_a_0_COOK",
        "id": "m_6_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_2",
    "mealIndex": 2,
  },
]
`;

exports[`prep meal plan a prep that spans a week boundary 1`] = `
Array [
  Object {
    "actions": Array [],
    "dateIndex": 0,
    "id": "meal_0_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_-6_1_a_0_COOK",
        "dayIndex": 0,
        "id": "m_0_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_-6_2_a_0_COOK",
        "dayIndex": 0,
        "id": "m_0_2_a_0_EAT",
        "leftovers": true,
        "mealIndex": 2,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 1,
    "id": "meal_1_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_1_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_1_a_0_COOK",
        "id": "m_1_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "id": "m_1_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 2,
    "id": "meal_2_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_1_a_0_COOK",
        "id": "m_2_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "id": "m_2_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 3,
    "id": "meal_3_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_3_1_a_0_COOK",
        "id": "m_3_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_2_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_3_2_a_0_COOK",
        "id": "m_3_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 4,
    "id": "meal_4_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_1_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "id": "m_4_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 5,
    "id": "meal_5_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_1_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "id": "m_5_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 6,
    "id": "meal_6_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_1_a_0_COOK",
        "id": "m_6_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_2_a_0_COOK",
        "id": "m_6_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_2",
    "mealIndex": 2,
  },
]
`;

exports[`prep meal plan for a large family plan 1`] = `
Array [
  Object {
    "actions": Array [],
    "dateIndex": 0,
    "id": "meal_0_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_1_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_2_a_0_COOK",
        "recipeType": "BIG",
        "servings": 12,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "id": "m_0_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 1,
    "id": "meal_1_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_1_a_0_COOK",
        "id": "m_1_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "id": "m_1_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 2,
    "id": "meal_2_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_1_a_0_COOK",
        "id": "m_2_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "id": "m_2_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 3,
    "id": "meal_3_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "dayIndex": 3,
        "id": "m_3_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_2_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 4,
    "id": "meal_4_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_1_a_0_COOK",
        "id": "m_4_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_2_a_0_COOK",
        "recipeType": "BIG",
        "servings": 12,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "id": "m_4_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 5,
    "id": "meal_5_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 5,
        "id": "m_5_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_2_a_0_COOK",
        "recipeType": "BIG",
        "servings": 12,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "id": "m_5_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 6,
    "id": "meal_6_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "dayIndex": 6,
        "id": "m_6_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 6,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_2_a_0_COOK",
        "id": "m_6_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_2",
    "mealIndex": 2,
  },
]
`;

exports[`prep meal plan for a really busy person 1`] = `
Array [
  Object {
    "actions": Array [],
    "dateIndex": 0,
    "id": "meal_0_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_1_a_0_COOK",
        "id": "m_0_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "id": "m_0_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 1,
    "id": "meal_1_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_1_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_-3_2_a_0_COOK",
        "dayIndex": 1,
        "id": "m_1_2_a_0_EAT",
        "leftovers": true,
        "mealIndex": 2,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 2,
    "id": "meal_2_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_-3_2_a_0_COOK",
        "dayIndex": 2,
        "id": "m_2_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "id": "m_2_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 3,
    "id": "meal_3_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_-3_2_a_0_COOK",
        "dayIndex": 3,
        "id": "m_3_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_2_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 4,
    "id": "meal_4_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 4,
        "id": "m_4_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_2_a_0_COOK",
        "recipeType": "BIG",
        "servings": 16,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "id": "m_4_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 5,
    "id": "meal_5_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 5,
        "id": "m_5_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "id": "m_5_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 6,
    "id": "meal_6_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 6,
        "id": "m_6_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 6,
        "id": "m_6_2_a_0_EAT",
        "leftovers": true,
        "mealIndex": 2,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_2",
    "mealIndex": 2,
  },
]
`;

exports[`prep meal plan for a variety plan 1`] = `
Array [
  Object {
    "actions": Array [],
    "dateIndex": 0,
    "id": "meal_0_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_1_a_0_COOK",
        "id": "m_0_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_0_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "id": "m_0_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 0,
    "id": "meal_0_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 1,
    "id": "meal_1_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_1_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_1_2_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "id": "m_1_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 1,
    "id": "meal_1_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 2,
    "id": "meal_2_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_1_a_0_COOK",
        "id": "m_2_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_2_2_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_2_2_a_0_COOK",
        "id": "m_2_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 2,
    "id": "meal_2_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 3,
    "id": "meal_3_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_0_2_a_0_COOK",
        "dayIndex": 3,
        "id": "m_3_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_3_2_a_0_EAT_OUT",
        "type": "EAT_OUT",
      },
    ],
    "dateIndex": 3,
    "id": "meal_3_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 4,
    "id": "meal_4_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_1_2_a_0_COOK",
        "dayIndex": 4,
        "id": "m_4_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_4_2_a_0_COOK",
        "recipeType": "NORMAL",
        "servings": 4,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "id": "m_4_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 4,
    "id": "meal_4_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 5,
    "id": "meal_5_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_1_a_0_COOK",
        "recipeType": "QUICK",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_1_a_0_COOK",
        "id": "m_5_1_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_5_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_5_2_a_0_COOK",
        "id": "m_5_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 5,
    "id": "meal_5_2",
    "mealIndex": 2,
  },
  Object {
    "actions": Array [],
    "dateIndex": 6,
    "id": "meal_6_0",
    "mealIndex": 0,
  },
  Object {
    "actions": Array [
      Object {
        "cookActionId": "m_4_2_a_0_COOK",
        "dayIndex": 6,
        "id": "m_6_1_a_0_EAT",
        "leftovers": true,
        "mealIndex": 1,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_1",
    "mealIndex": 1,
  },
  Object {
    "actions": Array [
      Object {
        "id": "m_6_2_a_0_COOK",
        "recipeType": "FANCY",
        "servings": 2,
        "type": "COOK",
      },
      Object {
        "cookActionId": "m_6_2_a_0_COOK",
        "id": "m_6_2_a_1_EAT",
        "leftovers": false,
        "type": "EAT",
      },
    ],
    "dateIndex": 6,
    "id": "meal_6_2",
    "mealIndex": 2,
  },
]
`;

exports[`prep meal plan nefarious cases eating out all the time 1`] = `[Function]`;

exports[`prep meal plan nefarious cases no time 1`] = `[Function]`;
